--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "next-approuter-app",
+  "name": "sample-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "biome lint *",
+    "format": "biome format *",
+    "check": "biome check *",
+    "lint:fix": "biome lint --apply *",
+    "format:fix": "biome format * --write",
+    "check:fix": "biome check --apply *"
   },
   "dependencies": {
     "react": "^18",
@@ -14,11 +19,15 @@
     "next": "14.2.15"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "1.9.4",
+    "@evilmartians/lefthook": "^1.7.22",
+    "@evilmartians/lefthook-installer": "^1.7.22",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "lefthook": "^1.7.22",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
