--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome lint *",
-    "format": "biome format *",
+      "format": "biome format *",
     "check": "biome check *",
-    "lint:fix": "biome lint --apply *",
+    "lint:fix": "biome lint --write *",
     "format:fix": "biome format * --write",
-    "check:fix": "biome check --apply *"
+    "check:fix": "biome check --write *"
   },
   "dependencies": {
     "react": "^18",
