--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,10 +2,10 @@ pre-commit:
   commands:
     check:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
-      run: npx biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true <files> && git update-index --again
+      run: npx biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true * && git update-index --again
 
 pre-push:
   commands:
     check:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
-      run: npx biome check --no-errors-on-unmatched --files-ignore-unknown=true <files>
+      run: npx biome check --no-errors-on-unmatched --files-ignore-unknown=true *
