--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,5 +1,11 @@
 pre-commit:
   commands:
+    format:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: bun run format:fix {staged_files}
+    lint:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: bun run lint:fix {staged_files}
     check:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
       run: npx biome check --write --no-errors-on-unmatched --files-ignore-unknown=true * && git update-index --again
